src/scss/components/_case_details_header.scss
// Case details header
.moj-button-menu__wrapper {
  margin-top: -5px !important;
}

.mcc-error-or-alert {
  margin-bottom: 30px;
  margin-top: 0;
}

.moj-alert {
  margin-bottom: 20px;
}

.negative-margin{
  margin-top: -10px;
}

.alert-spacing {
  margin-bottom: 20px;
}

.case-status-wrapper {
  align-items: center;
  margin-bottom: 0;
}

.tag-padding{
  padding-top: 6px;
  padding-bottom: 8px;
}

